change 'install.packages' to devtools::install_local

--- a/vimp_plus_sl.Rmd
+++ b/vimp_plus_sl.Rmd
@@ -1129,7 +1129,7 @@ library("xgboost")
 library("earth")
 library("dplyr")
 ## only run this if something has changed
-# install.packages("HVTN505_2019-4-9.tar.gz", type = "source", repos = NULL)
+# devtools::install_local("HVTN505_2019-4-25.tar.gz")
 library("HVTN505")
 library("kyotil")
 library("argparse")
@@ -1850,7 +1850,7 @@ library("xgboost")
 library("earth")
 library("dplyr")
 ## only run this if something has changed
-# install.packages("HVTN505_2019-4-9.tar.gz", type = "source", repos = NULL)
+# install.packages("HVTN505_2019-4-25.tar.gz", type = "source", repos = NULL)
 library("HVTN505")
 library("kyotil")
 library("argparse")
